fix bug with audio player display on mobile firefox

--- a/frontend/src/components/MediaPlayer/index.module.scss
+++ b/frontend/src/components/MediaPlayer/index.module.scss
@@ -57,7 +57,7 @@
     border: 1px solid $bg-gray;
 
     @include narrow {
-      grid-template-columns: none;
+      display: block;
     } 
   }
 
